methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:2: error: not found: value vuBiscuit
  vuBiscuit()
  ^