methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  vuBiscuit()
}

while (!haveBaggle) {
  for (compteur <- 1 to 6) {
    avance()
  }
  droite()
  avance()
  gauche()
}